# patient-readmission-risk

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: 01_eda.ipynb  02_model_selection.ipynb
src/api/: inference.py
src/apps/: inference.py  training.py
src/data/: __init__.py  data_cleaning.py  normalize_column_names.py
src/features/: __init__.py  auto_fe_wrapper.py  feature_builder.py
src/ml/evaluation/metrics/: metrics.py
src/ml/explainer/: __init__.py  shap_explainer.py
src/ml/pipelines/: __init__.py  inference_pipeline.py  preprocess_pipeline.py  training_pipeline.py
src/ml/tuning/: __init__.py  logistic_regression_tuner.py
src/monitoring/: __init__.py  drift.py
src/preprocessing/: __init__.py  balance_dataset.py
src/utils/: __init__.py  buffer.py
