[project]
name = "patient-readmission-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
commits = [
    "pre-commit>=4.2.0",
]
